--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@westdeutscherrundfunkkoeln/react-native-track-player",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A fully fledged audio module created for music apps",
   "contributors": [
     {
@@ -41,8 +41,7 @@
   "bugs": {
     "url": "https://github.com/WestdeutscherRundfunkKoeln/react-native-track-player/issues"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "peerDependencies": {
     "react": ">=16.8.6",
     "react-native": ">=0.60.0-rc.2"
