--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.android.library'
 
 boolean dash = false, hls = false, smoothstreaming = false
 
-File file = file('../../../track-player.json')
+File file = file('../../../../track-player.json')
 if(file.exists()) {
     def json = new JsonSlurper().parseText(file.text)
     dash = json.dash ?: dash
